# rust_uuid

./: Cargo.toml  benchmark_uuid.py  pyproject.toml
src/: lib.rs
