[package]
name = "rust_uuid"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_uuid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
uuid = { version = "1.6", features = ["v1", "v3", "v4", "v5", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true